# kv-db

./: .gitignore  .kvdb_history  ADVANCED_QUERY_SUMMARY.md  ARCHITECTURE.md  CACHE_OPTIMIZATION_SUMMARY.md  CLIENT_SDK_SUMMARY.md  CLI_ENHANCEMENT_SUMMARY.md  CMakeLists.txt  CONCURRENT_OPTIMIZATION_SUMMARY.md  DATA_TYPES_EXTENSION_SUMMARY.md  DISTRIBUTED_SYSTEM_SUMMARY.md  DISTRIBUTED_TRANSACTION_SUMMARY.md  FUNCTION_LIST.md  HELP_SYSTEM.md  INDEX_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  INDEX_OPTIMIZATION_SUMMARY.md  INDEX_TEST_RESULTS.md  MANIFEST  MONITORING_OPTIMIZATION_SUMMARY.md  NETWORK_PARTITION_SUMMARY.md  NETWORK_STATUS.md  OPS_TOOLS_SUMMARY.md  OPTIMIZATION.md  OPTIMIZATIONS.md  QUERY_USAGE_GUIDE.md  RAFT_IMPLEMENTATION_SUMMARY.md  README.md  SERIALIZATION_OPTIMIZATION_SUMMARY.md  SERIALIZATION_USAGE.md  STREAM_PROCESSING_SUMMARY.md  TRANSACTION_OPTIMIZATION_SUMMARY.md  benchmark_cache_performance.cpp  build_distributed_demo.sh  build_monitoring_example.sh  build_serialization_example.sh  build_stream_demo.sh  comprehensive_concurrent_test.cpp  consistency_summary.md  deadlock_test.cpp  debug_reader  (+117 more)
.github/workflows/: ci.yml
.kiro/specs/fault-recovery-optimization/: design.md  requirements.md  tasks.md
NOTE/: ans.txt
proto/: kvdb.proto
sdk/: README.md  build_all.sh
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/examples/: basic_example.cpp
sdk/cpp/include/: kvdb_client.h
sdk/cpp/src/: grpc_client.cpp
sdk/go/: client.go  go.mod
sdk/go/examples/: basic_example.go
sdk/java/: pom.xml
sdk/python/: README.md  requirements.txt  setup.py
sdk/python/examples/: basic_example.py
sdk/python/kvdb_client/: __init__.py  (+3 more)
src/: main.cpp  write_data.cpp
src/benchmark/: ycsb_benchmark.cpp  ycsb_benchmark.h
src/bloom/: bloom_filter.cpp  bloom_filter.h
src/cache/: block_cache.cpp  block_cache.h  cache_adapter.h  cache_manager.cpp  cache_manager.h  multi_level_cache.cpp  multi_level_cache.h
src/cli/: repl.cpp  repl.h
src/compaction/: compaction_strategy.cpp  compaction_strategy.h  compactor.cpp  compactor.h
src/compression/: columnar_compressor.cpp  columnar_compressor.h  compression_factory.cpp  compression_interface.h  compression_manager.cpp  compression_manager.h  snappy_compressor.cpp  snappy_compressor.h
src/concurrent/: coroutine_processor.cpp  coroutine_processor.h
src/db/: concurrent_kv_db.cpp  concurrent_kv_db.h  kv_db.cpp  kv_db.h  typed_kv_db.cpp  typed_kv_db.h
src/distributed/: distributed_kvdb.cpp  distributed_kvdb.h  distributed_types.h  failover_manager.cpp  failover_manager.h  load_balancer.cpp  load_balancer.h  shard_manager.cpp  shard_manager.h
src/distributed_transaction/: coordinator_impl.cpp  distributed_transaction_context.cpp  distributed_transaction_coordinator.h  distributed_transaction_participant.cpp  distributed_transaction_participant.h  distributed_transaction_types.h  simple_distributed_network.cpp  simple_distributed_network.h
src/format/: binary_encoder.cpp  binary_encoder.h  columnar_format.cpp  columnar_format.h  schema_optimizer.cpp  schema_optimizer.h
src/index/: composite_index.cpp  composite_index.h  fulltext_index.cpp  fulltext_index.h  index_manager.cpp  index_manager.h  index_types.h  inverted_index.cpp  inverted_index.h  query_optimizer.cpp  query_optimizer.h  secondary_index.cpp  secondary_index.h  tokenizer.cpp  tokenizer.h
src/iterator/: concurrent_iterator.cpp  concurrent_iterator.h  iterator.h  memtable_iterator.cpp  memtable_iterator.h  merge_iterator.cpp  merge_iterator.h  sstable_iterator.cpp  sstable_iterator.h
src/log/: wal.cpp  wal.h
src/monitoring/: alert_manager.cpp  alert_manager.h  metrics_collector.cpp  metrics_collector.h  metrics_server.cpp  metrics_server.h
src/mvcc/: mvcc_manager.cpp  mvcc_manager.h
src/network/: grpc_server.cpp  grpc_server.h  http_server.cpp  http_server.h  kvdb.grpc.pb.cc  kvdb.grpc.pb.h  kvdb.pb.cc  network_server.cpp  network_server.h  protocol.h  tcp_server.cpp  tcp_server.h  test_network.cpp  websocket_server.cpp  websocket_server.h
src/ops/: automation_manager.h  capacity_planner.h  data_migration_manager.cpp  data_migration_manager.h  ops_manager.h  performance_analyzer.h
src/partition_recovery/: detector_impl.cpp  failure_detector.h  partition_recovery_context.cpp  partition_recovery_manager.cpp  partition_recovery_manager.h  partition_recovery_types.h  simple_partition_network.cpp  simple_partition_network.h
src/query/: query_engine.cpp  query_engine.h
src/raft/: raft_node.cpp  raft_node.h  raft_types.h  simple_raft_network.cpp  simple_raft_network.h  simple_raft_state_machine.cpp  simple_raft_state_machine.h
src/recovery/: backup_manager.h  backup_manager_impl.cpp  checkpoint_manager.cpp  checkpoint_manager.h  crc_checksum.cpp  crc_checksum.h  enhanced_block.cpp  enhanced_block.h  integrity_checker.cpp  integrity_checker.h  recovery_manager.cpp  recovery_manager.h  segmented_wal.cpp  segmented_wal.h  test_integration  test_integration.cpp  test_integrity  test_integrity.cpp  test_segmented_wal.cpp  wal_adapter.cpp  wal_adapter.h
src/snapshot/: snapshot.h  snapshot_manager.cpp  snapshot_manager.h
src/sstable/: block_index.cpp  block_index.h  sstable_meta.h  sstable_meta_util.cpp  sstable_meta_util.h  sstable_reader.cpp  sstable_reader.h  sstable_writer.cpp  sstable_writer.h
src/storage/: binary_serializer.cpp  binary_serializer.h  concurrent_memtable.cpp  concurrent_memtable.h  data_types.cpp  data_types.h  json_serializer.cpp  json_serializer.h  memtable.cpp  memtable.h  messagepack_serializer.cpp  messagepack_serializer.h  protobuf_serializer.cpp  protobuf_serializer.h  serialization_factory.cpp  serialization_interface.h  typed_memtable.cpp  typed_memtable.h  versioned_value.h
src/stream/: change_stream.cpp  change_stream.h  event_driven.cpp  event_driven.h  realtime_sync.cpp  realtime_sync.h  stream_computing.cpp  stream_computing.h  stream_types.h
src/transaction/: enhanced_transaction_manager.h  lock_manager.cpp  lock_manager.h  transaction.cpp  transaction.h
src/version/: version.h  version_set.cpp  version_set.h
(+7 files in other folders)
